adds new website

--- a/acecv/HTML/index.html
+++ b/acecv/HTML/index.html
@@ -115,11 +115,10 @@
                                     <p>I'm Gillian, a fourth year student at the University of Waterloo studying software engineering. I'm currently having a lot of fun in an internship at Credit Karma, and have learnt a lot from my past experiences at various companies.</p>
                                     <p>Completing multiple internships in many various positions, I commit to keeping an open mind and adapting quickly to many different fields in software, cultures in different companies, and collaboration across different teams. From qa to mobile development to infrastructure to security services to full stack, I have touched upon many different lines of work and have openly embraced them all.</p>
                                 </div>
-                                <a href="#" class="btn-theme btn-theme-md btn-default-bg text-uppercase">See my resume</a>
+                                <a href="https://gillianm.me/resume.pdf" class="btn-theme btn-theme-md btn-default-bg text-uppercase">Check out my resume</a>
                             </div>
                         </div>
 
-                        <h2>My Skills</h2>
                         <!-- Progress Box -->
                         <!-- End Progress Box -->
                     </div>
