--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </div>
                     <div class="col-sm-6">
                         <div class="promo-block-img-wrap">
-                            <img class="promo-block-img img-responsive" src="img/mockup/portrait.png" align="Avatar">
+                            <img class="promo-block-img img-responsive" src="img/mockup/lightspurple.jpg" align="Avatar">
                         </div>
                     </div>
                 </div>
@@ -142,15 +142,15 @@
                 <div class="col-lg-2 col-lg-offset-1">
                     <h5>WORK</h5>
                 </div>
-                <div class="col-lg-6 margin-b-30">
+                <div class="col-lg-6 margin-b-10">
                     <h4>Credit Karma <span class="text-uppercase margin-l-20">Fullstack Web Developer</span></h4>
-                        <p>Contributed to new product feature from data flow to UI.</p>
+                        <p>Contributed to the development of a large end-to-end feature using many different languages and frameworks, taking ownership of the task timelines and saw it through completion by collaborating with stakeholders from many different functions.</p>
                 </div>
                 <div class="col-lg-3">
                     <p><sm>JANUARY 2018 - CURRENT</sm></p>
                 </div>
     
-                <div class="col-lg-6 col-lg-offset-3 margin-b-30">
+                <div class="col-lg-6 col-lg-offset-3 margin-b-10">
                 <h4>Snowflake Computing <span class="text-uppercase margin-l-20">Security and Services Team</span></h4>
                         <p>Developed a proof of concept end to end from research and design to software development in Java according to IETF specification for OAuth2.0.</p>
                 </div>
@@ -158,7 +158,7 @@
                     <p><sm>MAY 2017 - AUGUST 2018</sm></p>
                 </div>
 
-                <div class="col-lg-6 col-lg-offset-3 margin-b-30">
+                <div class="col-lg-6 col-lg-offset-3 margin-b-10">
                 <h4>Grand Rounds <span class="text-uppercase margin-l-20">Infrastructure Team</span></h4>
                         <p>Improved and maintained Docker based continuous integration system and identified and remedied various security vulnerabilities within the product in Ruby.</p>
                 </div>
@@ -166,7 +166,7 @@
                     <p><sm>AUGUST 2016 - DECEMBER 2016</sm></p>
                 </div>
 
-                <div class="col-lg-6 col-lg-offset-3 margin-b-30">
+                <div class="col-lg-6 col-lg-offset-3 margin-b-10">
                 <h4>Osellus Mobile <span class="text-uppercase margin-l-20">iOS Mobile Developer</span></h4>
                         <p>Implemented new features and resolved various issues in iOS projects in both Objective-C and Swift.</p>
                 </div>
@@ -174,7 +174,7 @@
                     <p><sm>JAN 2016 - APRIL 2016</sm></p>
                 </div>
 
-                <div class="col-lg-6 col-lg-offset-3 margin-b-30">
+                <div class="col-lg-6 col-lg-offset-3 margin-b-10">
                 <h4>Siemens <span class="text-uppercase margin-l-20"> R &amp; D Team </span></h4>
                         <p>Created test scripts in Perl and maintained test networks for quality assurance releases for firmware of network switches.</p>
                 </div>
