--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <div class="margin-b-50">
                                 <div class="margin-b-30">
                                     <h2>About Me</h2>
-                                    <p>I'm Gillian, a fourth year student at the University of Waterloo studying software engineering. I'm currently having a lot of fun in an internship at Credit Karma, and have learnt a lot from my past experiences at various companies.</p>
+                                    <p>I'm Gillian, a software engineer. Right now, I call myself a backend engineer, and I have learnt a lot from my past experiences at various companies.</p>
                                     <p>Completing multiple internships in many various positions, I commit to keeping an open mind and adapting quickly to many different fields in software, cultures in different companies, and collaboration across different teams. From qa to mobile development to infrastructure to security services to full stack, I have touched upon many different lines of work and have openly embraced them all.</p>
                                 </div>
                                 <a href="/resume.pdf" class="btn-theme btn-theme-md btn-default-bg text-uppercase">check out my resume</a>
@@ -143,15 +143,29 @@
                     <h5>WORK</h5>
                 </div>
                 <div class="col-lg-6 margin-b-10">
-                    <h4>Credit Karma <span class="text-uppercase margin-l-20">Fullstack Web Developer</span></h4>
+                    <h4>Credit Karma <span class="text-uppercase margin-l-20">Fulltime Backend Engineer</span></h4>
+                        <p>Building Scala services and GraphQL Typescript services.</p>
+                </div>
+                <div class="col-lg-3">
+                    <p><sm>SEPTEMBER 2019 - PRESENT</sm></p>
+                </div>
+                <div class="col-lg-6 margin-b-10">
+                    <h4>Facebook <span class="text-uppercase margin-l-20">Fullstack Web Developer</span></h4>
+                        <p>Designed and implemented a streamlined end to end user-experience for creating server-less Facebook Messenger bots using Hack, increasing developer productivity.</p>
+                </div>
+                <div class="col-lg-3">
+                    <p><sm>SEPTEMBER 2018 - DECEMBER 2018</sm></p>
+                </div>
+                <div class="col-lg-6 margin-b-10">
+                    <h4>Credit Karma <span class="text-uppercase margin-l-20">Fullstack Web Developer Intern</span></h4>
                         <p>Contributed to the development of a large end-to-end feature using many different languages and frameworks, taking ownership of the task timelines and saw it through completion by collaborating with stakeholders from many different functions.</p>
                 </div>
                 <div class="col-lg-3">
-                    <p><sm>JANUARY 2018 - CURRENT</sm></p>
+                    <p><sm>JANUARY 2018 - APRIL 2018</sm></p>
                 </div>
     
                 <div class="col-lg-6 col-lg-offset-3 margin-b-10">
-                <h4>Snowflake Computing <span class="text-uppercase margin-l-20">Security and Services Team</span></h4>
+                <h4>Snowflake Computing <span class="text-uppercase margin-l-20">Security and Services Team Intern </span></h4>
                         <p>Developed a proof of concept end to end from research and design to software development in Java according to IETF specification for OAuth2.0.</p>
                 </div>
                 <div class="col-lg-3">
@@ -159,7 +173,7 @@
                 </div>
 
                 <div class="col-lg-6 col-lg-offset-3 margin-b-10">
-                <h4>Grand Rounds <span class="text-uppercase margin-l-20">Infrastructure Team</span></h4>
+                <h4>Grand Rounds <span class="text-uppercase margin-l-20">Infrastructure Team Intern</span></h4>
                         <p>Improved and maintained Docker based continuous integration system and identified and remedied various security vulnerabilities within the product in Ruby.</p>
                 </div>
                 <div class="col-lg-3">
@@ -167,7 +181,7 @@
                 </div>
 
                 <div class="col-lg-6 col-lg-offset-3 margin-b-10">
-                <h4>Osellus Mobile <span class="text-uppercase margin-l-20">iOS Mobile Developer</span></h4>
+                <h4>Osellus Mobile <span class="text-uppercase margin-l-20">iOS Mobile Developer Intern</span></h4>
                         <p>Implemented new features and resolved various issues in iOS projects in both Objective-C and Swift.</p>
                 </div>
                 <div class="col-lg-3">
@@ -175,7 +189,7 @@
                 </div>
 
                 <div class="col-lg-6 col-lg-offset-3 margin-b-10">
-                <h4>Siemens <span class="text-uppercase margin-l-20"> R &amp; D Team </span></h4>
+                <h4>Siemens <span class="text-uppercase margin-l-20"> R &amp; D Team Intern</span></h4>
                         <p>Created test scripts in Perl and maintained test networks for quality assurance releases for firmware of network switches.</p>
                 </div>
                 <div class="col-lg-3">
