--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <div class="margin-b-50">
                                 <div class="margin-b-30">
                                     <h2>About Me</h2>
-                                    <p>I'm Gillian, a software engineer. Right now, I call myself a backend engineer, and I have learnt a lot from my past experiences at various companies.</p>
+                                    <p>I'm Gillian, a backend engineer.</p>
                                     <p>Completing multiple internships in many various positions, I commit to keeping an open mind and adapting quickly to many different fields in software, cultures in different companies, and collaboration across different teams. From qa to mobile development to infrastructure to security services to full stack, I have touched upon many different lines of work and have openly embraced them all.</p>
                                 </div>
                                 <a href="/resume.pdf" class="btn-theme btn-theme-md btn-default-bg text-uppercase">check out my resume</a>
@@ -149,14 +149,14 @@
                 <div class="col-lg-3">
                     <p><sm>SEPTEMBER 2019 - PRESENT</sm></p>
                 </div>
-                <div class="col-lg-6 margin-b-10">
+                <div class="col-lg-6 col-lg-offset-3 margin-b-10">
                     <h4>Facebook <span class="text-uppercase margin-l-20">Fullstack Web Developer</span></h4>
                         <p>Designed and implemented a streamlined end to end user-experience for creating server-less Facebook Messenger bots using Hack, increasing developer productivity.</p>
                 </div>
                 <div class="col-lg-3">
                     <p><sm>SEPTEMBER 2018 - DECEMBER 2018</sm></p>
                 </div>
-                <div class="col-lg-6 margin-b-10">
+                <div class="col-lg-6 col-lg-offset-3 margin-b-10">
                     <h4>Credit Karma <span class="text-uppercase margin-l-20">Fullstack Web Developer Intern</span></h4>
                         <p>Contributed to the development of a large end-to-end feature using many different languages and frameworks, taking ownership of the task timelines and saw it through completion by collaborating with stakeholders from many different functions.</p>
                 </div>
